tests/reject/classRequiredInitializer.emojic
🐇 🐟 🍇
  🔑 🆕 🍇🍉

  ❗️ 🙋 🍇
    😀 🔤I’m a fish.🔤❗️
  🍉
🍉

🐇 🐡 🐟 🍇
  🖍🆕 value 🔢 ⬅️ 0

  ✒️ ❗️ 🙋 🍇
    😀 🔤I’m a blowfish.🔤❗️
  🍉
🍉

🏁 🍇
  🆕🐟❗️ ➡️ fish
  🙋 fish❗️
🍉
